<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="${relativePackage}.${activityClass}">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <!--<androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_change_1h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_format"
                android:textColor="@color/material_grey700"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/one_hour"
                android:textColor="@color/material_grey700"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>-->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_change_24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_format"
                android:textColor="@color/material_grey700"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/one_day"
                android:textColor="@color/material_grey700"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--<androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_change_7d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_format"
                android:textColor="@color/material_grey700"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/week"
                android:textColor="@color/material_grey700"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>-->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_market_cap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd_format"
                android:textColor="@color/material_grey700"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/market_cap_min"
                android:textColor="@color/material_grey800"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_volume_24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd_format"
                android:textColor="@color/material_grey700"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/volume_24h_min"
                android:textColor="@color/material_grey800"
                android:textSize="@dimen/_12ssp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>